--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,22 @@ body {
   box-shadow: 0 18px 40px rgba(192, 40, 44, 0.25);
   padding: 0.6rem 0.85rem;
 }
+.search-btn{
+     padding: 10px 20px;
+    background-color: red;
+    color: white;
+    border-radius: 9999px;
+  transition: all 100ms ease-in;
 
+}
+
+
+.search-btn:hover{
+  transition: all 100ms ease-out;
+  transform: scale(1.14);
+  border-color: red;
+  box-shadow: 0 18px 40px #c0282c40;
+}
 
 
 .detail {
